--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./backend:/app
       - ./data:/app/data
+      - chroma_data:/app/db
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     restart: unless-stopped
@@ -17,7 +18,10 @@ services:
     build: ./frontend
     container_name: tutor_frontend
     ports:
-      - "3000:80"
+      - "3001:80"
     depends_on:
       - backend
     restart: unless-stopped
+
+volumes:
+  chroma_data:
