--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,6 +8,20 @@ server {
     proxy_set_header Connection '';
     proxy_http_version 1.1;
     chunked_transfer_encoding off;
+
+    location /api/ {
+        proxy_pass http://backend:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # SSE headers
+        proxy_set_header Connection '';
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_cache off;
+    }
     
     location / {
         root /usr/share/nginx/html;
