--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,26 @@
-# Build stage
-FROM node:20-alpine as build
+FROM node:20-alpine AS build
+
 WORKDIR /app
-COPY package.json ./
+
+# Copy package files
+COPY package*.json ./
 RUN npm install
 
+# Copy source
 COPY . .
+
+# Build
 RUN npm run build
 
-# Serve stage
+# Production stage
 FROM nginx:alpine
+
+# Copy built files
 COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
